<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.NotesActivity">

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/notes_menu_button_logout"
        app:showAsAction="never" />

</menu>