<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.activity.AddNoteActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/AppTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@drawable/et_background"
            android:gravity="top"
            android:hint="@string/add_note_hint"
            android:padding="12dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            android:text="@string/add_note_button" />
    </LinearLayout>
</LinearLayout>
