<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.activity.NotesActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/AppTheme" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srlLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabAddNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="12dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_add_white_48px" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvNotes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp" />

        </FrameLayout>

    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>